@@ -20,13 +20,13 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 import java.text.SimpleDateFormat
 
 plugins {
-  id 'com.diffplug.gradle.spotless' version '3.25.0'
-  id 'com.jfrog.bintray' version '1.8.4'
-  id 'com.github.ben-manes.versions' version '0.26.0'
+  id 'com.diffplug.gradle.spotless' version '4.3.0'
+  id 'com.jfrog.bintray' version '1.8.5'
+  id 'com.github.ben-manes.versions' version '0.28.0'
   id 'com.github.hierynomus.license' version '0.15.0'
-  id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+  id 'io.spring.dependency-management' version '1.0.9.RELEASE'
   id 'me.champeau.gradle.jmh' version '0.5.0' apply false
-  id 'net.ltgt.errorprone' version '1.1.1'
+  id 'net.ltgt.errorprone' version '1.2.1'
 }
 
 if (!JavaVersion.current().java11Compatible) {
@@ -123,8 +123,10 @@ allprojects {
     jcenter()
     mavenCentral()
     mavenLocal()
+    maven { url "https://hyperledger-org.bintray.com/besu-repo" }
     maven { url "https://consensys.bintray.com/pegasys-repo" }
-    maven { url "https://repository.apache.org/content/repositories/snapshots/" }
+    maven { url "https://repo.spring.io/libs-release" }
+    maven { url "https://dl.bintray.com/open-telemetry/maven" }
   }
 
   dependencies { errorprone "com.google.errorprone:error_prone_core" }
@@ -137,7 +139,9 @@ allprojects {
         include '**/src/*/java/**/*.java'
         exclude '**/generalstate/GeneralStateReferenceTest*.java'
         exclude '**/generalstate/GeneralStateRegressionReferenceTest*.java'
+        exclude '**/generalstate/LegacyGeneralStateReferenceTest*.java'
         exclude '**/blockchain/BlockchainReferenceTest*.java'
+        exclude '**/blockchain/LegacyBlockchainReferenceTest*.java'
         exclude '**/.gradle/**'
       }
       removeUnusedImports()
@@ -150,7 +154,6 @@ allprojects {
       target '*.gradle'
       greclipse().configFile(rootProject.file('gradle/formatter.properties'))
       endWithNewline()
-      paddedCell()
     }
 
     // Below this line are currently only license header tasks
@@ -232,6 +235,9 @@ allprojects {
    *   with the 'include' option above since it is a pattern, but this is a slightly more convenient
    *   option.
    * - 'root.log.level' and 'evm.log.level': allow to control the log level used during the tests.
+   * - 'acctests.keepLogsOfPassingTests': log files of failed acceptance tests are always saved.
+   *    This property additionally keeps the log files of successful tests.
+   *
    */
   test {
     jvmArgs = [
@@ -293,30 +299,62 @@ check.dependsOn('checkPluginAPIChanges', 'checkMavenCoordinateCollisions')
 
 subprojects {
 
-  sourceSets {
-    // test-support can be consumed as a library by other projects in their tests
-    testSupport {
-      java {
-        compileClasspath += main.output
-        runtimeClasspath += main.output
-        srcDir file('src/test-support/java')
+  if (file('src/test-support').directory) {
+    sourceSets {
+      // test-support can be consumed as a library by other projects in their tests
+      testSupport {
+        java {
+          compileClasspath += main.output
+          runtimeClasspath += main.output
+          srcDir file('src/test-support/java')
+        }
+        resources.srcDir file('src/test-support/resources')
       }
-      resources.srcDir file('src/test-support/resources')
     }
-    integrationTest {
-      java {
-        compileClasspath += main.output
-        runtimeClasspath += main.output
-        srcDir file('src/integration-test/java')
-      }
-      resources.srcDir file('src/integration-test/resources')
+
+    dependencies {
+      testImplementation sourceSets.testSupport.output
+    }
+
+    task testSupportJar(type: Jar) {
+      archiveBaseName = "${project.name}-support-test"
+      classifier = 'test-support'
+      from sourceSets.testSupport.output
     }
   }
 
-  task testSupportJar(type: Jar) {
-    archiveBaseName = "${project.name}-support-test"
-    classifier = 'test-support'
-    from sourceSets.testSupport.output
+  if (file('src/integration-test').directory) {
+    sourceSets {
+      integrationTest {
+        java {
+          compileClasspath += main.output
+          runtimeClasspath += main.output
+          srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file('src/integration-test/resources')
+      }
+    }
+
+    if (file('src/test-support').directory) {
+      dependencies {
+        integrationTestImplementation sourceSets.testSupport.output
+      }
+    }
+
+    task integrationTest(type: Test, dependsOn: ["compileTestJava"]) {
+      group = "verification"
+      description = "Runs the Besu integration tests"
+
+      jvmArgs = [
+        '--add-opens',
+        'java.base/java.util=ALL-UNNAMED',
+        '--add-opens',
+        'java.base/java.util.concurrent=ALL-UNNAMED'
+      ]
+      testClassesDirs = sourceSets.integrationTest.output.classesDirs
+      classpath = sourceSets.integrationTest.runtimeClasspath
+      outputs.upToDateWhen { false }
+    }
   }
 
   def sourceSetIsPopulated = { sourceSetName ->
@@ -396,27 +434,6 @@ subprojects {
     testSupportArtifacts
   }
 
-
-  dependencies {
-    testImplementation sourceSets.testSupport.output
-    integrationTestImplementation sourceSets.testSupport.output
-  }
-
-  task integrationTest(type: Test, dependsOn: ["compileTestJava"]) {
-    group = "verification"
-    description = "Runs the Besu integration tests"
-
-    jvmArgs = [
-      '--add-opens',
-      'java.base/java.util=ALL-UNNAMED',
-      '--add-opens',
-      'java.base/java.util.concurrent=ALL-UNNAMED'
-    ]
-    testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    outputs.upToDateWhen { false }
-  }
-
   if (file('src/jmh').directory) {
     apply plugin: 'me.champeau.gradle.jmh'
 
@@ -447,59 +464,89 @@ apply plugin: 'application'
 mainClassName = 'org.hyperledger.besu.Besu'
 applicationDefaultJvmArgs = [
   '-Dvertx.disableFileCPResolving=true',
+  // BESU_HOME is replaced by a doFirst block in the run task.
   '-Dbesu.home=BESU_HOME',
   // We shutdown log4j ourselves, as otherwise this shutdown hook runs before our own and whatever
   // happens during shutdown is not logged.
   '-Dlog4j.shutdownHookEnabled=false',
+  // Suppress Java JPMS warnings.  Document the reason for each suppression.
   // Bouncy Castle needs access to sun.security.provider, which is not open by default.
-  // This suppresses an illegal access warning.
   '--add-opens',
-  'java.base/sun.security.provider=ALL-UNNAMED'
+  'java.base/sun.security.provider=ALL-UNNAMED',
+  // Jackson likes to access java.util.OptionalLong's constructor
+  '--add-opens',
+  'java.base/java.util=ALL-UNNAMED',
+  // suppress netty specific module warnings in debug
+  "-Dio.netty.tryReflectionSetAccessible=true",
+  "--add-exports",
+  "java.base/jdk.internal.misc=ALL-UNNAMED",
+  "--add-opens",
+  "java.base/java.nio=ALL-UNNAMED"
 ]
 
 run {
   args project.hasProperty("besu.run.args") ? project.property("besu.run.args").toString().split("\\s+") : []
   doFirst {
+    applicationDefaultJvmArgs.add(0, "-Dotel.resource.attributes=service.name=besu-dev")
+    applicationDefaultJvmArgs.add(0, "-javaagent:"+ configurations.javaAgent.singleFile.toPath() + "")
     applicationDefaultJvmArgs = applicationDefaultJvmArgs.collect {
       it.replace('BESU_HOME', "$buildDir/besu")
     }
   }
 }
 
-startScripts {
-
+def tweakStartScript(createScriptTask) {
   def shortenWindowsClasspath = { line ->
-    line = line.replaceAll(/^set CLASSPATH=.*$/, "set CLASSPATH=%APP_HOME%/lib/*")
+    line.replaceAll(/^set CLASSPATH=.*$/, "set CLASSPATH=%APP_HOME%/lib/*")
   }
 
+  createScriptTask.unixScript.text = createScriptTask.unixScript.text.replace('BESU_HOME', '\$APP_HOME')
+  createScriptTask.windowsScript.text = createScriptTask.windowsScript.text.replace('BESU_HOME', '%~dp0..')
+  // OpenTelemetry Wiring for unix scripts
+  def agentFileName = configurations.javaAgent.singleFile.toPath().getFileName()
+  def unixRegex = $/exec "$$JAVACMD" /$
+  def forwardSlash = "/"
+  def unixReplacement = $/if [ -n "$$TRACING" ];then
+ TRACING_AGENT="-javaagent:$$APP_HOME/agent${forwardSlash}${agentFileName}"
+fi
+exec "$$JAVACMD" $$TRACING_AGENT /$
+  createScriptTask.unixScript.text = createScriptTask.unixScript.text.replace(unixRegex, unixReplacement)
+  // OpenTelemetry Wiring for windows scripts
+  def windowsRegex = $/"%JAVA_EXE%" %DEFAULT_JVM_OPTS%/$
+  def windowsReplacement = $/if Defined TRACING (TRACING_AGENT="-javaagent:"%APP_HOME%\agent\/$ + agentFileName + '")\r\n"%JAVA_EXE%" %DEFAULT_JVM_OPTS% %TRACING_AGENT%'
+  createScriptTask.windowsScript.text = createScriptTask.windowsScript.text.replace(windowsRegex, windowsReplacement)
+
+  // Prevent the error originating from the 8191 chars limit on Windows
+  createScriptTask.windowsScript.text =
+    createScriptTask.windowsScript
+    .readLines()
+    .collect(shortenWindowsClasspath)
+    .join('\r\n')
+}
+
+startScripts {
   doLast {
-    unixScript.text = unixScript.text.replace('BESU_HOME', '\$APP_HOME')
-    windowsScript.text = windowsScript.text.replace('BESU_HOME', '%~dp0..')
-
-    // Prevent the error originating from the 8191 chars limit on Windows
-    windowsScript.text =
-      windowsScript
-      .readLines()
-      .collect(shortenWindowsClasspath)
-      .join('\r\n')
+    tweakStartScript(startScripts)
   }
 }
 
-
-dependencies {
-  compile project(':besu')
-  errorprone 'com.google.errorprone:error_prone_core'
+task evmToolStartScripts(type: CreateStartScripts) {
+  mainClassName = 'org.hyperledger.besu.evmtool.EvmTool'
+  classpath = startScripts.classpath
+  outputDir = startScripts.outputDir
+  applicationName = 'evm'
+  defaultJvmOpts = [
+    "-Dsecp256k1.randomize=false"
+  ]
+  doLast {
+    tweakStartScript(evmToolStartScripts)
+  }
 }
 
-distributions {
-  main {
-    contents {
-      from("./LICENSE") { into "." }
-      from("build/reports/license/license-dependency.html") { into "." }
-      from("./docs/GettingStartedBinaries.md") { into "." }
-      from("./docs/DocsArchive0.8.0.html") { into "." }
-    }
-  }
+// Include the additional start scripts in the distribution
+applicationDistribution.into("bin") {
+  from(tasks.withType(CreateStartScripts))
+  fileMode = 0755
 }
 
 installDist { dependsOn checkLicenses }
@@ -520,6 +567,12 @@ distZip {
   }
 }
 
+def dockerVariants = [
+  "openjdk-11",
+  "graalvm",
+  "openjdk-latest"
+]
+
 // rename the top level dir from besu-<version> to besu and this makes it really
 // simple for use in docker
 tasks.register("dockerDistUntar") {
@@ -539,46 +592,60 @@ tasks.register("dockerDistUntar") {
   }
 }
 
-task distDocker(type: Exec) {
+task distDocker {
   dependsOn dockerDistUntar
+  inputs.dir("build/docker-besu/")
   def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
-  def imageName = "hyperledger/besu"
-  def image = "${imageName}:${dockerBuildVersion}"
   def dockerBuildDir = "build/docker-besu/"
-  workingDir "${dockerBuildDir}"
+  def imageName = "hyperledger/besu"
 
-  doFirst {
-    copy {
-      from file("${projectDir}/docker/Dockerfile")
-      into(workingDir)
+  doLast {
+    for (def variant in dockerVariants) {
+      copy {
+        from file("${projectDir}/docker/${variant}/Dockerfile")
+        into(dockerBuildDir)
+      }
+      exec {
+        def image = "${imageName}:${dockerBuildVersion}-${variant}"
+        executable "sh"
+        workingDir dockerBuildDir
+        args "-c", "docker build --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${getCheckedOutGitCommitHash()} -t ${image} ."
+      }
+    }
+    // tag the "default" (which is the variant in the zero position)
+    exec {
+      executable "sh"
+      args "-c", "docker tag '${imageName}:${dockerBuildVersion}-${dockerVariants[0]}' '${imageName}:${dockerBuildVersion}'"
     }
   }
-
-  executable "sh"
-  args "-c", "docker build --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${getCheckedOutGitCommitHash()} -t ${image} ."
 }
 
-task testDocker(type: Exec) {
+task testDocker {
   dependsOn distDocker
   def dockerReportsDir = "docker/reports/"
-  def image = project.hasProperty('release.releaseVersion') ? "hyperledger/besu:" + project.property('release.releaseVersion') : "hyperledger/besu:${project.version}"
-  workingDir "docker"
 
   doFirst {
     new File(dockerReportsDir).mkdir()
   }
 
-  executable "sh"
-  args "-c", "bash test.sh ${image}"
+  doLast {
+    for (def variant in dockerVariants) {
+      exec {
+        def image = project.hasProperty('release.releaseVersion') ? "hyperledger/besu:" + project.property('release.releaseVersion') : "hyperledger/besu:${project.version}"
+        workingDir "docker/${variant}"
+        executable "sh"
+        args "-c", "bash ../test.sh ${image}-${variant}"
+      }
+    }
+  }
 }
 
-task dockerUpload(type: Exec) {
+task dockerUpload {
   dependsOn distDocker
   def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
   def imageName = "hyperledger/besu"
   def azureImageName = "hyperledger.azurecr.io/besu"
   def image = "${imageName}:${dockerBuildVersion}"
-  def cmd = "docker push '${image}'"
   def additionalTags = []
 
   if (project.hasProperty('branch') && project.property('branch') == 'master') {
@@ -590,12 +657,29 @@ task dockerUpload(type: Exec) {
     additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
   }
 
-  additionalTags.each { tag ->
-    cmd += " && docker tag '${image}' '${imageName}:${tag.trim()}' && docker push '${imageName}:${tag.trim()}'"
-    cmd += " && docker tag '${image}' '${azureImageName}:${tag.trim()}' && docker push '${azureImageName}:${tag.trim()}'"
+  doLast {
+    for (def variant in dockerVariants) {
+      def variantImage = "${image}-${variant}"
+      exec {
+        def cmd = "docker push '${variantImage}'"
+        additionalTags.each { tag ->
+          cmd += " && docker tag '${variantImage}' '${imageName}:${tag.trim()}-${variant}' && docker push '${imageName}:${tag.trim()}-${variant}'"
+        }
+        executable "sh"
+        args "-c", cmd
+      }
+    }
+
+    exec {
+      def cmd = "docker push '${image}'"
+      additionalTags.each { tag ->
+        cmd += " && docker tag '${image}' '${imageName}:${tag.trim()}' && docker push '${imageName}:${tag.trim()}'"
+        cmd += " && docker tag '${image}' '${azureImageName}:${tag.trim()}' && docker push '${azureImageName}:${tag.trim()}'"
+      }
+      executable "sh"
+      args "-c", cmd
+    }
   }
-  executable "sh"
-  args "-c", cmd
 }
 
 task checkSpdxHeader(type: CheckSpdxHeader) {
@@ -604,7 +688,19 @@ task checkSpdxHeader(type: CheckSpdxHeader) {
   rootPath = "${projectDir}"
   spdxHeader = "* SPDX-License-Identifier: Apache-2.0"
   filesRegex = "(.*.java)|(.*.groovy)"
-  excludeRegex = "(.*generalstate/GeneralStateRegressionReferenceTest.*)|(.*generalstate/GeneralStateReferenceTest.*)|(.*blockchain/BlockchainReferenceTest.*)|(.*.gradle/.*)|(.*.idea/.*)"
+  excludeRegex = [
+    "(.*/generalstate/GeneralStateRegressionReferenceTest.*)",
+    "(.*/generalstate/GeneralStateReferenceTest.*)",
+    "(.*/generalstate/LegacyGeneralStateReferenceTest.*)",
+    "(.*/blockchain/BlockchainReferenceTest.*)",
+    "(.*/blockchain/LegacyBlockchainReferenceTest.*)",
+    "(.*/.gradle/.*)",
+    "(.*/.idea/.*)",
+    "(.*/out/.*)",
+    "(.*/build/.*)",
+    "(.*/src/[^/]+/generated/.*)",
+  ].join("|")
+
 }
 
 task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
@@ -693,6 +789,29 @@ tasks.register("verifyDistributions") {
     }
     if (distZipFile.length() < minDistributionSize) {
       throw new GradleException("Distribution zip is suspiciously small: " + distZipFile.length() + " bytes")
+    }
+  }
+}
+
+configurations {
+  javaAgent
+}
+
+dependencies {
+  implementation project(':besu')
+  implementation project(':ethereum:evmtool')
+  javaAgent group: 'io.opentelemetry.instrumentation.auto', name: 'opentelemetry-javaagent', classifier: 'all'
+  errorprone 'com.google.errorprone:error_prone_core'
+}
+
+distributions {
+  main {
+    contents {
+      from("./LICENSE") { into "." }
+      from("build/reports/license/license-dependency.html") { into "." }
+      from("./docs/GettingStartedBinaries.md") { into "." }
+      from("./docs/DocsArchive0.8.0.html") { into "." }
+      from(configurations.javaAgent.singleFile.toPath()) { into "agent"}
     }
   }
 }
